# CAGE-Causality-Aware-Gene-Evaluator

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
cage/: __init__.py  baseline_models.py  cli_args.py  deep_model_utils.py  metrics.py  preprocess_esca.py  public_biological_validation.py  public_validation_composite.py  publication_style.py  step2_build_cohort.py  step2_gene_sensitivity.py  step3_grouped_baselines.py  step3_runner.py  step4_ablation.py  step4_hptuner.py  step4_runner.py  step4_sparse_invariant_model.py  step5_cdps_ranking.py  step5_robustness.py  step5_runner.py  step6_biological_validation.py  step6_runner.py  step6b_survival_external_validation.py  step6b_top25_final_prioritization.py  step7_manuscript_packaging.py  step7_runner.py  step8_agilent_validation.py  step8_external_validation_and_release.py  step8_geo_validation.py  step8_prepare_geo.py  step8_runner.py
cage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: public_biological_validation.yaml
docs/: public_biological_validation.md
tests/: conftest.py  test_baseline_models.py  test_cdps.py  test_cli_smoke.py  test_deep_model.py  test_folds.py  test_leakage.py  test_metrics.py
